CollegeApp/force-app/main/default/objects/Student__c/fields/DocumentRequired__c.field-meta.xml
<CustomField>
    <fullName>DocumentRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DocumentRequired</label>
    <type>Checkbox</type>
</CustomField>