CollegeApp/force-app/main/default/objects/Student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Gender__c</columns>
    <columns>Phone__c</columns>
    <columns>Program__c</columns>
    <columns>Stage__c</columns>
    <columns>Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>